# Carlamayo

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  NOTICE  README.md  carla_alpamayo_closed_loop.py  carla_alpamayo_open_loop.py  carlamayo_closed_loop.py  carlamayo_open_loop.py  data_collect.py  pyproject.toml  requirements-alpamayo-inference.txt  requirements-carla.txt
.github/workflows/: ci.yml
docs/: environment-setup.md  inference-workflows.md  navigation-mode.md  oom-free-mode.md  vqa-mode.md
module/: alpamayo_compat.py  carla_interface.py  carla_runtime.py  config.py  data_collection.py  inference.py  latency_control.py  model_quantization.py  mpc_controller.py  navigation_control.py  oom_offload.py  open_loop_dataset.py  pid_controller.py  pygame_ui.py  respawn_control.py  visualization.py  vlm_generate_optimization.py
scripts/: start_carla_010.sh
src/alpamayo1_5/: config.py
tests/: test_carla_interface.py  test_carla_runtime.py  test_closed_loop_args.py  test_closed_loop_controller_selection.py  test_compare_latency_runs.py  test_config.py  test_data_collection.py  test_documentation_carla_launch.py  test_inference_navigation.py  test_inference_utils.py  test_latency_control.py  test_model_loading.py  test_model_quantization.py  test_mpc_controller.py  test_navigation_control.py  test_open_loop_dataset.py  test_pid_controller.py  test_pygame_ui.py  test_respawn_control.py  test_visualization.py  test_visualization_utils.py  test_vlm_generate_optimization.py
tools/: compare_latency_runs.py
